--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -28,6 +28,6 @@ jobs:
       - name: Run tests
         run: npm test
       - name: Build Project
-        run: npm run Build
+        run: npm run build
       - name: Deploy
         run: echo "Deploying ..."
